<resources>
    <string name="app_name">CustomTabsSample</string>
    <string name="session_bottombar_text">Back to home URL</string>
    <string name="favorite_before_text">気に入ったらハート押してお気に入りに追加しよう！</string>
    <string name="favorite_after_text">お気に入りに追加されています</string>

    <string name="button_label_launch">Launch</string>
    <string name="button_label_customize_toolbar">Customize toolbar</string>
    <string name="button_label_customize_animation">Customize animation</string>
    <string name="button_label_warmup">Warmup</string>
    <string name="button_label_prefetch">Prefetch</string>
    <string name="button_label_event">Event</string>
    <string name="button_label_session">Session</string>
    <string name="button_label_customize_request">Customize request</string>
    <string name="button_label_referrer">Referrer</string>
    <string name="button_label_oauth">OAuth Authorization</string>
    <string name="button_label_remote_view">Remote View</string>
    <string name="button_label_deprecated_bottom_bar">Deprecated bottom bar</string>
    <string name="button_label_bottom_bar">Bottom bar</string>
    <string name="button_label_session_bottom_bar">Session bottom bar</string>

    <!-- Customize toolbar -->
    <string name="customize_toolbar_launch_button_dark_toolbar">Launch with Dark toolbar</string>
    <string name="customize_toolbar_launch_button_light_toolbar">Launch with Light toolbar</string>
    <string name="customize_toolbar_launch_button_no_tint">Launch with disable tint</string>
    <string name="customize_toolbar_launch_button_add_menu_item">Launch with menu item</string>
    <string name="customize_toolbar_curl_copy">Copy url: "%1$s"</string>
    <string name="customize_toolbar_curl_copy_error">Could not copy url.</string>


    <!-- OAuth -->
    <string name="oauth_request_url">https://github.com/login/oauth/authorize?client_id=%1$s
    </string>
    <string name="callback_scheme">callback</string>
    <string name="callback_host">com.sakebook.android.sample.customtabssample</string>


    <!-- RemoteView -->
    <string name="remote_view_twitter">callback</string>

</resources>
