<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/launch_button"
            android:text="@string/button_label_launch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/custom_toolbar_button"
            android:text="@string/button_label_customize_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/animation_button"
            android:text="@string/button_label_customize_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/custom_request_button"
            android:text="@string/button_label_customize_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/oauth_button"
            android:text="@string/button_label_oauth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/deprecated_bottom_bar_button"
            android:text="@string/button_label_deprecated_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/remote_view_button"
            android:text="@string/button_label_remote_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/prefetch_button"
            android:text="@string/button_label_prefetch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/event_button"
            android:text="@string/button_label_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/session_bottom_bar_button"
            android:text="@string/button_label_session_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
