<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_custom_toolbar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sakebook.android.sample.customtabssample.toolbar.CustomToolbarActivity">

    <Button
        android:id="@+id/button_toolbar_dark"
        android:text="@string/customize_toolbar_launch_button_dark_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_toolbar_light"
        android:text="@string/customize_toolbar_launch_button_light_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_toolbar_no_tint_action_button"
        android:text="@string/customize_toolbar_launch_button_no_tint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_toolbar_add_menu_item"
        android:text="@string/customize_toolbar_launch_button_add_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
